Actualizacion del catalogo

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -418,7 +418,7 @@ nav a:hover {
   color: black
 }
 
-.close:hover { color: #8006b1; }
+.close:hover { color: #08ffea; }
 
 /* Flechas */
 .modal-content .prev,
